Fixed Zip code sizing on Tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,6 @@ Transitions
 .newsletter textarea:focus{
     background-color: lightblue;
     outline: none !important;
-    border:1px solid lightgray;
     box-shadow: 0 0 5px lightgray;
 }
 
@@ -166,18 +165,26 @@ MEDIA Queries
     }
 
     fieldset div{
-        
         flex-direction: row;    
+        justify-content: left;
     }
 
     .contact div input,
     .contact div select{
-        flex: 3;
+        flex: 2;
     }
 
     .contact div label{
-        flex: 1;
         align-self: center;
+        flex: 1;
+        max-width: 175px;
+    }
+
+
+    #zip{
+        flex: 1;
+        align-self: left;
+        max-width: 300px;
     }
 
 
